--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="pt">
 <head>
@@ -6,6 +7,7 @@
   <title>Escola Democrática: Desafios e Práticas</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/css/bootstrap.min.css">
   <link rel="stylesheet" href="style.css">
+  
 </head>
 <body>
   <div id="app" class="container mt-5">
@@ -32,6 +34,7 @@
       <button onclick="reiniciar()" class="btn btn-secondary mt-3">Jogar Novamente</button>
     </div>
   </div>
-  <script src="script.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
+  <script type="module" src="script.js"></script>
 </body>
 </html>
