--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
         <h1 class="titulo-principal">Quiz</h1>
         <h2 class="subtitulo">Escola Democrática: Desafios e Práticas</h2>
         <div class="avatares">
-          <div class="avatar" style="background-image: url('/imgs/gabriel.png');"></div>
-          <div class="avatar" style="background-image: url('/imgs/mor.png');"></div>
-          <div class="avatar" style="background-image: url('/imgs/luiza.png');"></div>
+          <div class="avatar" style="background-image: url('https://raw.githubusercontent.com/LuanVidal/panelinha/refs/heads/main/imgs/gabriel.png');"></div>
+          <div class="avatar" style="background-image: url('https://raw.githubusercontent.com/LuanVidal/panelinha/refs/heads/main/imgs/mor.png');"></div>
+          <div class="avatar" style="background-image: url('https://raw.githubusercontent.com/LuanVidal/panelinha/refs/heads/main/imgs/luiza.png');"></div>
         </div>
         <div class="avatares">
-          <div class="avatar" style="background-image: url('/imgs/lucas.png');"></div>
-          <div class="avatar" style="background-image: url('/imgs/guilherme.png');"></div>
+          <div class="avatar" style="background-image: url('https://raw.githubusercontent.com/LuanVidal/panelinha/refs/heads/main/imgs/lucas.png');"></div>
+          <div class="avatar" style="background-image: url('https://raw.githubusercontent.com/LuanVidal/panelinha/refs/heads/main/imgs/guilherme.png');"></div>
         </div>
         <input type="text" id="nome" class="campo-nome" placeholder="Digite seu nome">
         <button onclick="iniciarJogo()" class="btn-jogar">Jogar</button>
